# ochre

./: .gitignore  .ocamlformat  AGENTS.md  CHANGES.md  LICENSE  Makefile  README.md  README.mld  dune  dune-project  ochre-cli.opam  ochre.opam
.github/workflows/: ci.yml  examples-pages.yml
cli/: cli.ml  dune
docs/: Ochre-Decoration.md  Ochre-Html_options.md  Ochre-Theme.md  Ochre-Token.md  Ochre-Transform.md  Ochre-Transform_builtin.md  Ochre.md  README.md  cli.md  cli.mld  dune  ochre-theme.md  ochre-token.md  ochre.md
docs/video/: ochre-examples.tape
examples/: demo.ml  dune  sample.ml
examples/themes/: simple-dark.json
lib/: color.ml  color.mli  decoration.ml  decoration.mli  dune  escape.ml  escape.mli  grammar_loader.ml  grammar_loader.mli  html_options.ml  html_options.mli  ochre.ml  ochre.mli  render_ansi.ml  render_ansi.mli  render_html.ml  render_html.mli  render_latex.ml  render_svg.ml  render_svg.mli  render_tokens.ml  scope.ml  scope.mli  theme.ml  theme.mli  theme_builtin_json.ml  token.ml  token.mli  transform.ml  transform.mli  transform_builtin.ml
test/: dune  html-dual-theme-preview.html  html-preview.html  latex-preview.tex  test_html.ml  test_html.mlx  test_html_common.ml  test_html_dual_theme.ml  test_html_dual_theme.mlx  test_latex.ml  test_ochre.ml  test_svg.ml  test_svg.mlx
test/cram/: cli_reason.t  decoration.t  dune  highlight.t  render_ansi.t  render_html.t  render_latex.t  render_svg.t  scope.t  test_decoration.ml  test_highlight.ml  test_render_ansi.ml  test_render_html.ml  test_render_latex.ml  test_render_svg.ml  test_scope.ml  test_theme.ml  test_transform.ml  theme.t  transform.t
todos/: html-output-options-plan.md  theme-composition-ux-plan.md  transformer-pipeline-plan.md
