(test
 (name test_ochre)
 (libraries ochre alcotest))

(executables
 (names test_html test_latex test_svg)
 (libraries ochre unix))

(rule
 (target test_latex.tex)
 (deps test_latex.exe)
 (action
  (with-stdout-to
   %{target}
   (run %{dep:test_latex.exe}))))

(rule
 (target latex-preview.tex)
 (mode promote)
 (deps test_latex.exe)
 (action
  (with-stdout-to
   %{target}
   (run %{dep:test_latex.exe}))))

(rule
 (target svg-preview.svg)
 (mode promote)
 (deps test_svg.exe)
 (action
  (with-stdout-to
   %{target}
   (run %{dep:test_svg.exe} --github-preview))))
