(test
 (name test_ochre)
 (libraries ochre alcotest))

(executables
 (names test_html test_html_dual_theme test_latex test_svg)
 (libraries ochre unix tm-grammars))

(rule
 (target test_latex.tex)
 (deps test_latex.exe)
 (action
  (with-stdout-to
   %{target}
   (run %{dep:test_latex.exe}))))

(rule
 (target latex-preview.tex)
 (mode promote)
 (deps test_latex.exe)
 (action
  (with-stdout-to
   %{target}
   (run %{dep:test_latex.exe}))))

(rule
 (target svg-preview.svg)
 (mode promote)
 (deps test_svg.exe)
 (action
  (with-stdout-to
   %{target}
   (run %{dep:test_svg.exe} --github-preview))))

(rule
 (target html-preview.html)
 (mode promote)
 (deps test_html.exe)
 (action
  (with-stdout-to
   %{target}
   (run %{dep:test_html.exe} --preview))))

(rule
 (target html-dual-theme-preview.html)
 (mode promote)
 (deps test_html_dual_theme.exe)
 (action
  (with-stdout-to
   %{target}
   (run %{dep:test_html_dual_theme.exe} --preview))))
